src/main/java/com/navita/test/desafioApiNavita/errors/TesteException.java
package com.navita.test.desafioApiNavita.errors;

public class TesteException extends RuntimeException{
    public TesteException(String message){
        super(message);
    }
}
